@@ -13,6 +13,12 @@
 # if not specified, it will be enabled
 Check4Updates   On
 
+# EnableGeneralStatistics
+# specify if pDLNA should store statistics about the running pDLNA installation
+#  - memory usage
+# if not specified, it will be enabled
+EnableGeneralStatistics On
+
 # PIDFile
 # the full path of the PID file
 # if none is specified, it will be set to /var/run/pdlna.pid
